# mjlab_microduck

./: .gitattributes  .gitignore  BEYONDMIMIC.md  IMITATION_LEARNING.md  README.md  analyze_sim2real_gap.py  check_sim2sim.py  concatenate_motions.py  convert_to_beyondmimic.py  debug_accelerations.py  debug_actions.py  debug_actions2.py  debug_rotations.py  export.py  infer_policy.py  inspect_foot_contacts.py  plot_observations_comparison.py  plot_observations_comparison_plotly.py  pyproject.toml  real_test.pkl  replay_observation.py  replay_reference_motion.py  sim_test.pkl  test_randomizations.py  upload_motion_artifact.py  validate_reference_motion.py
docs/: IMITATION_LEARNING.md
scripts/: analyze_real_vs_sim_rollout.py  analyze_replay_match.py  diagnose_sim2real_factor.py  get_knee_data_sim.py  infer_policy.py  plot_knee_data.py  plot_observations_comparison_plotly.py  replay_observation.py  test_imu_observations.py  test_isaac_lab_vs_real.py  test_projected_gravity.py  visualize_replay_match.py
src/mjlab_microduck/: motion_loader.py  reference_motion.py
src/mjlab_microduck/data/: .gitkeep  reference_motion.pkl
src/mjlab_microduck/robot/: microduck_collisions_constants.py  microduck_constants.py
src/mjlab_microduck/tasks/: __init__.py  head_command.py  imitation_command.py  imitation_mdp.py  joystick_command.py  joystick_mdp.py  mdp.py  microduck_beyondmimic_env_cfg.py  microduck_ground_pick_env_cfg.py  microduck_imitation_env_cfg.py  microduck_joystick_env_cfg.py  microduck_jump_env_cfg.py  microduck_roll_env_cfg.py  microduck_sit_stand_env_cfg.py  (+4 more)
(+126 files in other folders)
